test/compile_errors/err_derive_default_generic_struct.w
//! expect-error: derive Default for generic structs is not implemented yet

@[derive(Default)]
type Boxed[T] { value: T }

fn main:
    let _ = 0
